init kafka producer

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,14 @@
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--        faker data -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.15</version>
+        </dependency>
+        <!--        end faker data -->
     </dependencies>
 
     <build>
